--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html {
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   width: 500px;
   min-height: 440px;
   /* background-color: #ffffff; */
